Bug 472800 - Status bar is always shown on startup 5.2 beta1
Summary: Status bar is always shown on startup 5.2 beta1
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 475218 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-07-30 12:19 UTC by Squeaky Pancakes
Modified: 2023-10-05 00:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Squeaky Pancakes 2023-07-30 12:19:53 UTC
SUMMARY
When launching krita the status bar is always shown.

STEPS TO REPRODUCE
1. disable show status bar
2. restart krita
3. 

OBSERVED RESULT


EXPECTED RESULT
should respect show status bar setting

SOFTWARE/OS VERSIONS
Operating System: Devuan GNU/Linux 5
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.0-10-amd64 (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-3210M CPU @ 2.50GHz
Memory: 15.4 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 4000
Manufacturer: LENOVO
Product Name: 234234U
System Version: ThinkPad T430

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-08-09 00:02:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1895
Comment 2 Freya Lupen 2023-08-29 17:06:22 UTC
Git commit fdd8ea9dc537a4ffc74e2607359ddb702f3648d6 by Freya Lupen.
Committed on 29/08/2023 at 16:36.
Pushed by alvinwong into branch 'master'.

Respect statusbar visibility after Welcome page

M  +1    -0    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/-/commit/fdd8ea9dc537a4ffc74e2607359ddb702f3648d6
Comment 3 Alvin Wong 2023-08-29 17:07:21 UTC
Git commit db35009c4081906fd6c9929f96477d011b79c1de by Alvin Wong, on behalf of Freya Lupen.
Committed on 29/08/2023 at 19:07.
Pushed by alvinwong into branch 'krita/5.2'.

Respect statusbar visibility after Welcome page
(cherry picked from commit fdd8ea9dc537a4ffc74e2607359ddb702f3648d6)

M  +1    -0    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/-/commit/db35009c4081906fd6c9929f96477d011b79c1de
Comment 4 vanyossi 2023-10-05 00:59:16 UTC
*** Bug 475218 has been marked as a duplicate of this bug. ***