Respect statusbar visibility after Welcome page

BUG:472800
(cherry picked from commit fdd8ea9dc537a4ffc74e2607359ddb702f3648d6)